# evening_standard

./: .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
evening_standard/: urls.py  wsgi.py
evening_standard/settings/: base.py  dev.py  production.py
evening_standard/static/css/: evening_standard.css
evening_standard/templates/: base.html
home/: models.py
home/migrations/: 0003_homepage_body.py  0004_recordingpage.py
home/templates/home/: contact_page.html  contact_page_landing.html  home_page.html  recording_page.html
search/: views.py
setlist/: admin.py  apps.py  models.py  urls.py  views.py
setlist/migrations/: 0001_initial.py  0002_alter_setsong_unique_together.py
setlist/templates/setlist/: chart_lookup.html  index.html  setlist.html  song.html
shows/: admin.py  models.py  views.py
shows/migrations/: 0001_initial.py  0002_alter_show_venue.py  0003_showindex_show_recordings.py  0004_show_set_list.py  0005_venue_website.py  0006_listen.py
shows/templates/: js_player.html
shows/templates/shows/: show.html  show_index.html
src/evening_standard/: urls.py
src/evening_standard/settings/: base.py  production.py
src/evening_standard/static/css/: evening_standard.css
src/home/: image_formats.py
src/home/migrations/: 0003_homepage_body.py  0005_contactpage_formfield.py
src/setlist/: models.py  urls.py  views.py
src/setlist/migrations/: 0003_alter_song_options_song_recordings.py
src/shows/: admin.py  views.py
src/shows/migrations/: 0003_showindex_show_recordings.py  0005_venue_website.py
(+4 files in other folders)
