[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"


[project]
name = "evening_standard"
version = "1.0"
dependencies = [
    "Django<5.0",
    "wagtail>=5.1,<6.2",
    "django-machina",
    "whoosh",
    "django-watchfiles",
    "django-bulma",
    "wagtail-django-recaptcha>=2.0",
    "ics"
]

